Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18646

Explorer : Crash on unhandled exception when backspace while editing in folder panel

    XMLWordPrintable

Details

    Description

      reactos-bootcd-0.4.15-dev-5402-gf908d37-x86-gcc-lin-dbg

      • Open Explorer
      • Open "Folder" panel
      • Go to "Program Files" (or other folder)
      • Click once then leave mouse over to enter "Edit mode"

      • Hit Backspace
      •  Explorer crash on unhandled exception

      Likely same cause as (but here it's 100% reproductible) : CORE-18504

      Logs : ReactOS.log

      Video : ROS-screen0.webm

      Unhandled exception
      ExceptionCode:    80000003
      CS:EIP 1b:7adee116
      DS 23 ES 23 FS 3b GS 0
      EAX: 00000001   EBX: 0029e0c0   ECX: 00000001
      EDX: 00000000   EBP: 01a2f8b4   ESI: 0029e0c0   ESP: 01a2f87c
      EDI: 00298e11   EFLAGS: 00000246
      Address:
      * <shell32.dll:8e116 (sdk/include/crt/mingw32/intrin_x86.h:1678 (CDefView::_ForceStatusBarResize))> (C:\ReactOS\system32\shell32.dll@7ad60000)
      Frames:
      * <shell32.dll:8e19f (dll/win32/shell32/CDefView.cpp:2555 (CDefView::UIActivate))> (C:\ReactOS\system32\shell32.dll@7ad60000)
      * <browseui.dll:3bfae (dll/win32/browseui/shellbrowser.cpp:1009 (CShellBrowser::BrowseToPath))> (C:\ReactOS\System32\browseui.dll@78970000)
      * <browseui.dll:3c592 (dll/win32/browseui/shellbrowser.cpp:814 (CShellBrowser::BrowseToPIDL))> (C:\ReactOS\System32\browseui.dll@78970000)
      * <browseui.dll:3c65c (dll/win32/browseui/shellbrowser.cpp:1300 (CShellBrowser::NavigateToParent))> (C:\ReactOS\System32\browseui.dll@78970000)
      * <browseui.dll:3e29b (dll/win32/browseui/shellbrowser.cpp:3629 (CShellBrowser::OnBackspace))> (C:\ReactOS\System32\browseui.dll@78970000)
      * <browseui.dll:49e74 (dll/win32/browseui/shellbrowser.cpp:672 (CShellBrowser::ProcessWindowMessage))> (C:\ReactOS\System32\browseui.dll@78970000)
      * <browseui.dll:3a7dc (dll/win32/browseui/shellbrowser.cpp:1408 (CShellBrowser::WindowProc))> (C:\ReactOS\System32\browseui.dll@78970000)
      * <user32.dll:6a9c2 (win32ss/user/user32/windows/wndproc_fixup.S:48 (CALL_EXTERN_WNDPROC))> (C:\ReactOS\system32\user32.dll@77a20000)
      * <user32.dll:5ecb0 (win32ss/user/user32/windows/message.c:1547 (IntCallWindowProcW))> (C:\ReactOS\system32\user32.dll@77a20000)
      * <user32.dll:60af7 (win32ss/user/user32/windows/message.c:3015 (User32CallWindowProcFromKernel))> (C:\ReactOS\system32\user32.dll@77a20000)
      * <ntdll.dll:f3dd (dll/ntdll/dispatch/i386/dispatch.S:142 (KiUserCallbackDispatcher))> (C:\ReactOS\System32\ntdll.dll@7c920000)
      * <browseui.dll:38983 (dll/win32/browseui/shellbrowser.cpp:2233 (CShellBrowser::TranslateAcceleratorSB))> (C:\ReactOS\System32\browseui.dll@78970000)
      * <shell32.dll:8df15 (dll/win32/shell32/CDefView.cpp:2526 (CDefView::TranslateAcceleratorW))> (C:\ReactOS\system32\shell32.dll@7ad60000)
      * <browseui.dll:38a29 (dll/win32/browseui/shellbrowser.cpp:2891 (CShellBrowser::v_MayTranslateAccelerator))> (C:\ReactOS\System32\browseui.dll@78970000)
      * <browseui.dll:2c484 (dll/win32/browseui/desktopipc.cpp:406 (BrowserThreadProc))> (C:\ReactOS\System32\browseui.dll@78970000)
      * <kernel32.dll:1c980 (dll/win32/kernel32/client/thread.c:71 (BaseThreadStartup))> (C:\ReactOS\system32\kernel32.dll@7c620000)
      

      Attachments

        1. ExplorerBand.patch
          2 kB
        2. image-2022-11-19-16-20-53-739.png
          image-2022-11-19-16-20-53-739.png
          42 kB
        3. image-2023-02-10-15-16-02-457.png
          image-2023-02-10-15-16-02-457.png
          4 kB
        4. ReactOS.log
          100 kB
        5. ROS-screen0.webm
          281 kB

        Issue Links

          Activity

            People

              learn_more Mark Jansen
              KRosUser KRosUser
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: