[BROWSEUI] Fix crash while editing a label in the folder tree

+ Add a missing break
CORE-18646